必要なビューを追加

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,7 +21,7 @@
             %span.caret
           %ul.dropdown-menu{role: "menu"}
             %li
-              %a{href: "#"} Profile Edit
+              = link_to 'My Page', user_path(current_user)
             %li
               %a{href: "#"} Logout
         %li
