--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,7 +21,9 @@
             %span.caret
           %ul.dropdown-menu{role: "menu"}
             %li
-              = link_to 'My Page', user_path(current_user)
+              = link_to 'Edit', edit_user_path(current_user)
+                %li
+                  = link_to 'My Page', user_path(current_user)
             %li
               %a{href: "#"} Logout
         %li
