--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,9 +1,10 @@
 .container.user-new.clearfix
-  = form_for @user do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     .col-md-8.col-md-offset-2
+      = devise_error_messages!
       %header.row.user-nav.row
         .col-md-12
-          %h2 Edit
+          %h2 Register
           .user-name_image.row
             .user-name.col-md-10
               = f.text_field :name, placeholder: "Input Username", autofocus: true, required: true
@@ -12,6 +13,10 @@
               = f.file_field :avatar
           .user-email
             = f.text_field :email, placeholder: "Input Email", required: true
+          .user-password
+            = f.password_field :password, placeholder: "Input Password", required: true, autocomplete: "off"
+          .user-password
+            = f.password_field :password_confirmation, placeholder: "Confirm Password", required: true, autocomplete: "off"
         .col-md-12
           %h4 Position
           .user-user-member.row
@@ -27,4 +32,4 @@
               = f.text_area :occupation, placeholder: "Input Occupation", size: "30×4"
         .row.text-center.user-btn
           .actions
-            = f.submit "SAVE", id: "button", class: "btn btn-lg btn-primary btn-block"
+            = f.submit "SIGN UP", id: "button", class: "btn btn-lg btn-primary btn-block"
