--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,10 +3,11 @@
   %head
     %meta{content: "text/html; charset=US-ASCII", "http-equiv" => "Content-Type"}/
     %title Protospace
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' =>  true
+    = javascript_include_tag 'application', 'data-turbolinks-track' =>  true
     = csrf_meta_tags
   %body
-    = render "layouts/header"
+    = render "shared/header"
+    = render "shared/messages"
     = yield
-    = render "layouts/footer"
+    = render "shared/footer"
