--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -610,6 +610,13 @@ body {
   font-weight: 400;
 }
 
+
+
+.tag-project {
+  height: 10px;
+  text-align: center;
+}
+
 .tag-name {
   margin-bottom: 10px;
   width: 100%;
@@ -621,7 +628,26 @@ body {
   font-weight: 200;
 }
 
-.tag-project {
-  height: 10px;
-  text-align: center;
+
+/* -- flash messages ------------------------------------ */
+.alert {
+  margin: 0;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
+
+
+.alert--success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #468847;
+}
+
+.alert--danger {
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  color: #a94442;
+}
+
